// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourseCard > renders Featured as expected 1`] = `
<div>
  <a
    class="course-card course-card--featured card flex flex-col items-start justify-between m-[3px] container-lined p-6 max-w-[700px] transition-transform duration-200 hover:scale-[1.01] hover:container-elevated"
    href="https://bluedot.org/courses/what-the-fish"
  >
    <div
      class="course-card__content block md:flex gap-space-between w-full"
    >
      <div
        class="course-card__text"
      >
        <p
          class="course-card__featured-label uppercase font-[650] text-size-xs mb-3 bluedot-p"
        >
          Featured course
        </p>
        <h3
          class="course-card__title mb-6 bluedot-h3"
        >
          Title
        </h3>
        <button
          class="cta-button flex items-center justify-center rounded-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cursor-pointer cta-button--primary bg-bluedot-normal link-on-dark course-card__cta mb-6 px-6"
          data-testid="cta-button"
          type="button"
        >
          <span
            class="cta-button__text"
          >
            Apply now
          </span>
        </button>
        <p
          class="course-card__subtitle overflow-hidden text-bluedot-black text-ellipsis mb-6 bluedot-p"
        >
          Description
        </p>
      </div>
      <div
        class="course-card__image-container shrink-0 md:max-w-[60%] w-fit mb-6"
      >
        <img
          alt=""
          class="course-card__image size-full object-cover"
          src="/images/courses/course.jpg"
        />
      </div>
    </div>
    <div
      class="course-card__footer flex justify-between w-full"
    >
      <p
        class="course-card__footer-left text-left text-size-xs text-bluedot-black bluedot-p"
      >
        <span
          class="course-card__length font-medium"
        />
      </p>
      <span
        class="tag container-lined inline-flex items-center px-4 py-2 text-xs font-semibold text-color-secondary-text course-card__type"
        role="status"
      />
    </div>
  </a>
</div>
`;

exports[`CourseCard > renders default as expected 1`] = `
<div>
  <div
    class="p-[3px] h-full"
  >
    <a
      class="card flex flex-col items-start transition-transform duration-200 hover:scale-[1.01] course-card course-card--regular container-lined p-5 flex flex-col max-w-full h-full hover:container-elevated"
      href="https://bluedot.org/courses/what-the-fish"
    >
      <div
        class="card__image-container w-full mb-4"
      >
        <img
          alt="Title"
          class="card__image max-w-full max-h-full object-cover rounded-lg course-card__image w-full h-[165px] object-cover rounded-none"
          src="/images/courses/course.jpg"
        />
      </div>
      <div
        class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
      >
        <div
          class="card__text"
        >
          <p
            class="card__title bluedot-h4 mb-2"
          >
            Title
          </p>
          <p
            class="card__subtitle bluedot-p grow overflow-hidden text-ellipsis line-clamp-4 max-h-[96px]"
          >
            Description
          </p>
        </div>
        <div
          class="card__bottom-section flex flex-col gap-space-between"
        >
          <div
            class="card__footer flex items-center justify-between w-full"
          >
            <div
              class="course-card__footer flex justify-between w-full"
            >
              <p
                class="course-card__footer-left text-left text-size-xs text-bluedot-black bluedot-p"
              >
                <span
                  class="course-card__length font-medium"
                />
              </p>
              <span
                class="tag container-lined inline-flex items-center px-4 py-2 text-xs font-semibold text-color-secondary-text course-card__type"
                role="status"
              />
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`CourseCard > renders with optional args 1`] = `
<span
  class="course-card__length font-medium"
/>
`;

exports[`CourseCard > renders with optional args 2`] = `
<img
  alt="Title"
  class="card__image max-w-full max-h-full object-cover rounded-lg course-card__image w-full h-[165px] object-cover rounded-none"
  src="/images/team/custom-size.jpg"
/>
`;
